HEAD
	+ Fixed EBox::CloudSync::Slave to sync uid and gid numbers on user update
	  and added unit tests for it
	+ Added EBox::Users::Group::setInternal method
	+ Allow to use lazy flag with EBox::Users::User::setInternal
	+ Added unit tests for cloud sync code
	+ Check available IP addresses when enable module
	+ Added lock to cloud-sync script
	+ Better integration of edit groups for mail group aliases
	+ Update group icon when type of group changes
	+ Implement _preModifyUser on LdapUserBase
	+ Throw exceptions on EBox::USers::LdapObject::get when entry not exists
	+ Fixed regression in LDAP info page for external AD mode
3.2.7
	+ Print slave-sync output to zentyal.log instead of stdout
	+ Fixed excesive restrictive validation of external AD password in wizard
	+ Fixed 3.0 -> 3.2 migration when there are other modules extending LDAP
3.2.6
	+ Remove useless warning when deleting a user or group with offer 2013
	+ Show system but not internal groups in user edition form
	+ Allow unsafe characters for user and password in external AD mode.
	+ Fixed bug in external AD connection. Reuse already estabished
	  external AD connection.
	+ The "sub ous" return the OUs hierarquically ordered
	+ Check for defined uidNumber and gidNumber creating users and groups
3.2.5
	+ Revert useless chown workaround
	+ Wait for the services before ending the start daemon action to prevent
	  its usage before being ready
	+ Better error handling when the default group is not found
	+ Fixed distribution group edition
3.2.4
	+ Add error, errorText and errorDescription methods to
	  EBox::Exceptions::LDAP
	+ Added missing EBox::Exceptions uses
	+ Better error handling when we get a LdapObject that doesn't exists
3.2.3
	+ Remove undefined warnings on users/group creation
	+ Fix 'Cannot connect to samba LDAP' error in manage model when samba
	  is installed but disabled
3.2.2
	+ Add missing use to EBox::Users::LDAP::ExternalAD
	+ Force DNS restart when users mode changed